:hammer: fix: slider buttons z-index bigger than header z-index

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -601,7 +601,7 @@ div.newletter form {
     header {
         position: sticky;
         top: 0;
-        z-index: 1;
+        z-index: 10;
         width: 100%;
         background-color: #FFF;
     }
